[package]
name = "hts4"
version = "1.0.0"
authors = ["mksipe <masonsipe0513@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
which = "4.0.2"
colored = "2"
clap = "3.0.6"


[lib]
name = "cringe"
path = "src/cringe/src/lib.rs"
